--- a/rose-wan/package.json
+++ b/rose-wan/package.json
@@ -2,6 +2,7 @@
   "name": "rose-wan",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rosexw.github.io/cohort3-react-pokemon"
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
